1st screen desktop

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="start__content">
                 <h1 class="start__title">
                     <span>The</span>
-                    <span class="start__title-bordered">future of <i>travel</i></span>
+                    <span class="start__title-bordered">future of <i>travel</i></span><br>
                     <span>takes off soon. . .</span>
                 </h1>
                 <h2 class="start__subtitle">Be the first to board.</h2>
