set input type = email add submit listener on modal opening

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <h2 class="arrival__content-title">The Elude app is preparing for arrival.</h2>
                     <h3 class="arrival__content-subtitle">Join the standby list.</h3>
                     <form id="form" class="arrival__form">
-                        <input placeholder="Your Email..." type="text" class="arrival__form-input">
+                        <input type="email" placeholder="Your Email..." class="arrival__form-input">
                         <button class="btn arrival__form-button">Let Me Know</button>
                     </form>
                 </div>
