add Privacy Policy & Terms of use # links

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </a>
         </div>
         <p class="footer__desc">
-            © 2019 Elude App. All rights reserved. Privacy Policy & Terms of use
+            © 2019 Elude App. All rights reserved. <a href="#">Privacy Policy</a> & <a href="#">Terms of use</a>
         </p>
     </footer>
     <div class="modal" id="form-modal">
