stringify data on send response & parse add name to email input

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         method="post"
                         id="form"
                         class="arrival__form">
-                        <input type="email" placeholder="Your Email..." class="arrival__form-input">
+                        <input type="email" placeholder="Your Email..." name="email" class="arrival__form-input">
                         <button class="btn arrival__form-button">Let Me Know</button>
                     </form>
                 </div>
