update styles (add cross-browser prefixes) add filler to start el

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </header>
     <main class="container">
         <section id="app-start" class="start">
+            <div class="start__filler"></div>
             <div class="start__tornpaper-wrapper">
                 <img
                     class="start__tornpaper"
